--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -1,6 +1,12 @@
-#body {
 	
-	h1 {
-	border-bottom: 1px solid black;
+    section {
+        clear: both;
+				background-color: red;
+    }
+    h1 {
+      border-bottom: 1px solid black;
+    }
+    section#education a {
+        display: block;
+        float: right;
 	}
-}
