--- a/css/main.scss
+++ b/css/main.scss
@@ -45,6 +45,8 @@ $on-laptop:        800px;
 @import
         "base",
         "layout",
-        "syntax-highlighting", 
-        "main"
+        "syntax-highlighting",
+        "main",
+        "resume"
+
 ;
