--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -7,6 +7,7 @@
   display: block;
   font-family: Georgia, "Times New Roman", serif;
   padding: 100px 50px;
+  text-shadow: 1px 1px black;
   h1 {
     font-size: 3rem;
   }
