make picture fixed when scrolling

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -1,5 +1,6 @@
 .page-lead {
   background-image: url(https://lh6.googleusercontent.com/-wNh-SP0ZtUc/U1KaBndvMeI/AAAAAAAAEuE/3NPeYIgSFRM/w958-h539-no/IMG_20130813_132531_027.jpg);
+  background-attachment: fixed;
   background-repeat: no-repeat;
   text-align: center;
   background-size: cover;
