--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -110,7 +110,6 @@ a {
 blockquote {
     color: $grey-color;
     border-left: 4px solid $grey-color-light;
-    padding-left: $spacing-unit / 2;
     font-size: 18px;
     letter-spacing: -1px;
     font-style: italic;
@@ -154,19 +153,13 @@ pre {
  * Wrapper
  */
 .wrapper {
-    max-width: -webkit-calc(1200px - (#{$spacing-unit} * 2));
-    max-width:         calc(1200px - (#{$spacing-unit} * 2));
     margin-right: auto;
     margin-left: auto;
-    padding-right: $spacing-unit;
-    padding-left: $spacing-unit;
+    padding: 0;
     @extend %clearfix;
 
     @include media-query($on-laptop) {
-        max-width: -webkit-calc(800px - (#{$spacing-unit}));
-        max-width:         calc(800px - (#{$spacing-unit}));
-        padding-right: $spacing-unit / 2;
-        padding-left: $spacing-unit / 2;
+        padding: 0;
     }
 }
 
