--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -153,12 +153,16 @@ pre {
  * Wrapper
  */
 .wrapper {
+    max-width: -webkit-calc(1200px - (#{$spacing-unit} * 2));
+     max-width:         calc(1200px - (#{$spacing-unit} * 2));
     margin-right: auto;
     margin-left: auto;
     padding: 0;
     @extend %clearfix;
 
     @include media-query($on-laptop) {
+      max-width: -webkit-calc(800px - (#{$spacing-unit} * 2));
+       max-width:         calc(800px - (#{$spacing-unit} * 2));
         padding: 0;
     }
 }
