modified blog page

--- a/css/main.scss
+++ b/css/main.scss
@@ -47,6 +47,8 @@ $on-laptop:        800px;
         "layout",
         "syntax-highlighting",
         "main",
-        "resume"
+        "resume",
+        "blog",
+        "portfolio"
 
 ;
