created structure for portfolio files

--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -5,6 +5,7 @@
   margin: 2%;
   background-color: #fff;
   img {
+    /* pictures are 430px width by 250px height */
     height: 250px;
     width: 96%;
     margin: -3% 2% 2% 2%;
