--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -1,28 +1,9 @@
-.blog-tile {
-  display: inline-block;
-  width: 39%;
-  padding: 6% 3% 6% 3%;
-  margin: 2%;
-  background-color: #fff;
-  img {
-    /* pictures are 430px width by 250px height */
-    height: 250px;
-    width: 96%;
-    margin: -3% 2% 2% 2%;
-  }
-  .post-link{
-    font-weight: bold;
-  }
+.blog-tile{
+  background-color:#F0FAFF;
 }
-
-.post-list{
-  background-color: $grey-color-light;
-}
-
-
 
 @media (max-width: $on-palm) {
-  .blog-tile {
+  .post-tile {
     width: 90%;
     margin: 1%;
     padding: 4%;
