--- a/css/main.scss
+++ b/css/main.scss
@@ -49,6 +49,7 @@ $on-laptop:        800px;
         "main",
         "resume",
         "blog",
-        "portfolio"
+        "portfolio",
+        "resources"
 
 ;
