--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -48,7 +48,7 @@
 }
 
 .home-button:hover {
-  background-color: lightgray;
+  background-color: gray;
   text-decoration: none;
 }
 
@@ -62,6 +62,14 @@ h3 {
   font-weight: bold;
   }
 }
+
+@media (max-width: $on-palm){
+  .home-tile {
+    width: 90%;
+    margin: 2%;
+  }
+}
+
 
 .home-body h1.post-title{
   display: none;
