Changed image file structure

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -24,8 +24,8 @@
 .site-title{
   font-size: 2rem;
   padding-top: 20px;
-  :hover{
-    font-size: 2.1rem;
+  :hover a {
+    font-size: 3rem;
   }
 }
 .trigger{
