Changed footer to reflect img file structure change

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,9 +6,9 @@
       <h1>A Bit More About Me</h1>
       <div>
         <ul class="footer-icons">
-          <li><a href="https://plus.google.com/+SondaSengupta/"><img src="/media-icons/googleplus.png"></a></li>
-          <li><a href="https://www.linkedin.com/pub/sonda-sengupta/57/121/948"><img src="/media-icons/linkedin.png"></a></li>
-          <li><a href="https://github.com/SondaSengupta"><img src="/media-icons/github.png"></a></li>
+          <li><a href="https://plus.google.com/+SondaSengupta/"><img src="/icons/googleplus.png"></a></li>
+          <li><a href="https://www.linkedin.com/pub/sonda-sengupta/57/121/948"><img src="/icons/linkedin.png"></a></li>
+          <li><a href="https://github.com/SondaSengupta"><img src="/icons/github.png"></a></li>
         </ul>
       </div>
       <div>
