--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -100,7 +100,7 @@ h3 {
   padding: 6% 3% 6% 3%;
   margin: 2%;
   background-color: #fff;
-  img {
+  .largeimg {
     /* pictures are 430px width by 250px height */
     height: 250px;
     width: 96%;
@@ -109,6 +109,23 @@ h3 {
   .post-link{
     font-weight: bold;
   }
+}
+
+.tile-icon {
+  margin: 1px;
+  height: 30px;
+  width: 30px;
+  opacity: .7;
+  display: inline;
+}
+
+.tile-icon:hover {
+  opacity: 1;
+}
+
+.tile-date{
+  margin-left: 50%;
+  display: inline;
 }
 
 .site-footer{
