added intro to resources and copyright

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,6 +13,7 @@
       </div>
       <div>
         <p>Powered by Jekyll and Github Pages</p>
+        &#169 Sonda Sengupta
       </div>
 
 </footer>
