Updated with Google Doc resume

--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -20,3 +20,14 @@
     border: dotted gray 1px;
   }
 }
+
+.google-resume {
+  width: 100%;
+  text-align: center;
+  iframe {
+    height: 1200px;
+    width: 800px;
+    border: none;
+  }
+
+}
