--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -77,6 +77,13 @@ h3 {
 
 .hometile-wrapper{
   display: inline-block;
+  text-align: center;
+  .headshot {
+    border-radius: 50%;
+    margin-bottom: 10px;
+    height: 100px;
+    width: 100px;
+  }
 }
 
 .homepost-wrapper{
