adding custom search and updating home page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,20 @@
         {% endfor %}
       </div>
     </nav>
-
+    <div class=>
+      <script>
+        (function() {
+          var cx = '007918222472144182689:gzmgb4eb0qm';
+          var gcse = document.createElement('script');
+          gcse.type = 'text/javascript';
+          gcse.async = true;
+          gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+          var s = document.getElementsByTagName('script')[0];
+          s.parentNode.insertBefore(gcse, s);
+        })();
+      </script>
+      <gcse:search></gcse:search>
+    </div>
   </div>
 
 </header>
